提交产地翻译

--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -88,7 +88,7 @@ picpath=
 ##wise
 #identity=wise
 #supplierId=2016083001937
-#api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#api_url=https://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
 #sku_interface=GetAllAvailabilityMarketplace
 #image_interface=GetAllImageMarketplace
@@ -146,15 +146,27 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##russo capri
+#identity=common
+#supplierId=2016030701799
+#api_url=http://95.110.163.155:8580/ws_sito_shang/ws_sito_P15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=Shang2016
+#savePath=F\:\\Atelier-template
+
+##brunarosso
 identity=common
-supplierId=2016030701799
-api_url=http://95.110.163.155:8580/ws_sito_shang/ws_sito_P15.asmx/
+supplierId=201610091627
+api_url=http://213.144.71.1/WS_Sito_p15/WS_Sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=Shang2016
+password=shang2609
 savePath=F\:\\Atelier-template
 
 
