--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -37,7 +37,7 @@ time=3600000
 ##wise
 supplierId=2016083001937
 #api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
-api_url=https://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
+api_url=http://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
 sku_interface=GetAllAvailabilityMarketplace
 userName=shangpin
 password=Shang1808
