--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -158,15 +158,27 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##brunarosso
+#identity=common
+#supplierId=201610091627
+#api_url=http://213.144.71.1/WS_Sito_p15/WS_Sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=shang2609
+#savePath=F\:\\Atelier-template
+
+## O
 identity=common
-supplierId=201610091627
-api_url=http://213.144.71.1/WS_Sito_p15/WS_Sito_p15.asmx/
+supplierId=201610101627
+api_url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=shang2609
+password=shang0807
 savePath=F\:\\Atelier-template
 
 
