--- a/export-product/src/main/resources/conf.properties
+++ b/export-product/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #savepath=/data/product/
-conf_suppliers=201603291836,201604251314
+conf_suppliers=201604161128
 savepath=F\:\\testpics
 picpath=F\:\\testpics
 #yyyy-MM-dd
