--- a/atelier-lind-order/build.gradle
+++ b/atelier-lind-order/build.gradle
@@ -1,29 +1,26 @@
 dependencies {
     compile(
 
-            "com.google.code.gson:gson:2.2.2",           
-            project(':project-common'),
-            project(':project-dao'),
-            project(':iog-common-product'),
-               project(':openapi-ice'),
-               
+        "com.google.code.gson:gson:2.2.2",
+        project(':project-common'),
+        project(':openapi-ice'),
+        project(':iog-common-product'),
+           
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
-
 
 jar {
 
     dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
-
     def manifestCp = configurations.compile.files.collect  {
         File file = it
         "lib/${file.name}"
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.itemInfo_purchase.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.ostore.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
