--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -170,15 +170,27 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ## O
+#identity=common
+#supplierId=201610101627
+#api_url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=shang0807
+#savePath=F\:\\Atelier-template
+
+##paolo
 identity=common
-supplierId=201610101627
-api_url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
+supplierId=2016012101751
+api_url=http://93.46.213.149:8580/ws_sito/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=shang0807
+password=fiorillo1003
 savePath=F\:\\Atelier-template
 
 
