--- a/lungolivigno-order/src/main/resources/conf.properties
+++ b/lungolivigno-order/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=201605271426666
+supplierId=
 supplierNo=
 
 jobsSchedule=0 0/2  * * * ?
@@ -7,6 +7,6 @@ endDateOfTemp=
 
 user_name=ll_web
 user_password=lng.r45h
-url_login=http://concordia.vdr-s.com/BSWebApi20/api/User/Login
-url_saveOrder=http\://concordia.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId\=
-url_cancelOrder=http\://concordia.vdr-s.com/BSWebApi20/api/Order/CancelOrder?SessionId=
+url_login=http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
+url_saveOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId\=
+url_cancelOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/CancelOrder?SessionId\=
