--- a/pozzilei-stock/build.gradle
+++ b/pozzilei-stock/build.gradle
@@ -15,8 +15,8 @@ jar {
 
 
     manifest {
-      //   attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.schedule.Startup'
-       attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.PozzileiStockImp'
+       attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.schedule.Startup'
+       //attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.PozzileiStockImp'
     }
 }
 
