--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -159,7 +159,7 @@ picpath=
 
 ##brunarosso
 #identity=common
-#supplierId=201610091627
+#supplierId=2015091801507
 #api_url=http://213.144.71.1/WS_Sito_p15/WS_Sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
 #sku_interface=GetAllAvailabilityMarketplace
