--- a/atelier-brunarosso-order/src/main/resources/conf.properties
+++ b/atelier-brunarosso-order/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 #供应商ID
-supplierId=2015111001656
-supplierNo=S0000592
+supplierId=2015091801507
+supplierNo=
 
 startDateOfTemp=
 endDateOfTemp=
@@ -8,13 +8,13 @@ endDateOfTemp=
 jobSchedule=0 0/2 * * * ? 
 jobConfirmSchedule=0 0/2 * * * ? 
 
-url=http://extcloud.genteroma.net:8088/ws_sito/ws_sito_p15.asmx/
+url=http://213.144.71.1/WS_Sito_p15/WS_Sito_p15.asmx/
 createOrder_interface=NewOrderMarketPlace
 setStatus_interface=SetStatusOrderMarketplace
 getStatus_interface=GetStatusOrderMarketplace
 getItemStock_interface=GetItemStockBySizeMarketPlace
-user=shangpin
-password=Shang1807
+user=Shangpin
+password=shang2609
 
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
