--- a/atelier-ostore-stock/build.gradle
+++ b/atelier-ostore-stock/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compile(
-		project(':iog-sop'),
+		project(':openapi-ice'),
 		project(':iog-common-product'),
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
