--- a/monnierfreres/build.gradle
+++ b/monnierfreres/build.gradle
@@ -15,12 +15,18 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources,dependsClassPath
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
+    
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.monnierfreres.service.MonnierFrameFetchProduct'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
