--- a/studio69-order/src/main/resources/conf.properties
+++ b/studio69-order/src/main/resources/conf.properties
@@ -10,3 +10,5 @@ endDateOfTemp=
 url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
 username=SHANGPIN
 password=2MWWKgNSxgf
+
+wsdlUrl=http://studio69.atelier98.net/api_studio69/api_studio69.asmx?wsdl
