--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-day=90
+day=360
 picpath=
 
 ##Vietti
@@ -182,15 +182,26 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##paolo
+#identity=common
+#supplierId=2016012101751
+#api_url=http://93.46.213.149:8580/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=fiorillo1003
+#savePath=F\:\\Atelier-template
+
+##divo
 identity=common
-supplierId=2016012101751
-api_url=http://93.46.213.149:8580/ws_sito/ws_sito_p15.asmx/
+supplierId=2016022401783
+api_url=http://185.5.180.90/ws_sito/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=fiorillo1003
-savePath=F\:\\Atelier-template
-
+password=shang1210
+savePath=/usr/local/app/divo/savepath
 
