--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -35,13 +35,13 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##wise
-supplierId=2016083001937
-#api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
-api_url=http://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
-sku_interface=GetAllAvailabilityMarketplace
-userName=shangpin
-password=Shang1808
-savePath=F\:\\Atelier-stock-template
+#supplierId=2016083001937
+##api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#api_url=http://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=Shang1808
+#savePath=F\:\\Atelier-stock-template
 
 ##Createve99
 #supplierId=2016030401795
@@ -82,5 +82,13 @@ savePath=F\:\\Atelier-stock-template
 #userName=shangpin
 #password=Shang2016
 #savePath=F\:\\Atelier-stock-template
+
+##tufano
+supplierId=
+api_url=http://95.242.72.33/ws_sito/ws_sito_P15.asmx/
+sku_interface=GetAllAvailabilityMarketplace
+userName=shangpin
+password=shang2016
+savePath=/usr/local/app/tufano/savepath
 
 
