--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -194,14 +194,26 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##divo
+#identity=common
+#supplierId=2016022401783
+#api_url=http://185.5.180.90/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=shang1210
+#savePath=/usr/local/app/divo/savepath
+
+##tufano
 identity=common
-supplierId=2016022401783
-api_url=http://185.5.180.90/ws_sito/ws_sito_p15.asmx/
+supplierId=201610281628
+api_url=http://95.242.72.33/ws_sito/ws_sito_P15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=shang1210
-savePath=/usr/local/app/divo/savepath
+password=shang2016
+savePath=F\:\\Atelier-template
 
