--- a/optical-stock/src/main/resources/conf.properties
+++ b/optical-stock/src/main/resources/conf.properties
@@ -2,5 +2,6 @@ supplierId=2015101301604
 jobsSchedule=0 45 0/1 * * ? 
 time=3600000
 
-excel.url=http://www.opticalscribe.com/spfiles/spfilexls.xlsx
+#excel.url=http://www.opticalscribe.com/spfiles/spfilexls.xlsx
+excel.url=http://www.opticalscribe.com/spfiles/spfilexls.xml
 excel.filepath=F\:\\spfilexls.xlsx
