--- a/MengottiOnline-stock/build.gradle
+++ b/MengottiOnline-stock/build.gradle
@@ -1,30 +1,31 @@
-
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-    		project(':iog-common-product'),
-        project(':openapi-ice'),
-        "net.sourceforge.javacsv:javacsv:2.0",
- 
+            
+            "net.sourceforge.javacsv:javacsv:2.0",
+            project(':iog-common-product'),
+            project(':openapi-ice'),
     )
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources ,dependsClassPath
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-   // def manifestCp = configurations.compile.files.collect  {
-   //    File file = it
-   //     "lib/${file.name}" 
-   // }.join(' ')
+
+//    def manifestCp = configurations.compile.files.collect  {
+//
+  //      File file = it
+    //    "lib/${file.name}"
+//    }.join(' ')
+
+
 
     manifest {
-	
-   		 attributes 'Main-Class': 'com.shangpin.iog.MengottiOnline.stock.StockImp'
-    
-   
-   
-   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.mengotti.GrapStock'
+
+  //      attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
