--- a/MengottiOnline/build.gradle
+++ b/MengottiOnline/build.gradle
@@ -1,28 +1,32 @@
 
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-           	
+
+            "commons-dbcp:commons-dbcp:1.4",
+            "net.sourceforge.javacsv:javacsv:2.0",
+            project(':project-common'),
             project(':iog-common-product'),
-        	"net.sourceforge.javacsv:javacsv:2.0",
- 
     )
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources ,dependsClassPath
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
-   // def manifestCp = configurations.compile.files.collect  {
-   //    File file = it
-   //     "lib/${file.name}" 
-   // }.join(' ')
+
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.MengottiOnline.StartUp'
-   
-   
-   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.mengotti.StartUp'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
+
 }
