--- a/stockMontiHK/src/main/resources/conf.properties
+++ b/stockMontiHK/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
-supplierId=2015050800242
+supplierId=
 hours=2
+HOST=http://open.shangpin.com:8080
 
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
