--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -206,14 +206,26 @@ picpath=
 #savePath=/usr/local/app/divo/savepath
 
 ##tufano
+#identity=common
+#supplierId=201610281628
+#api_url=http://95.242.72.33/ws_sito/ws_sito_P15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=shang2016
+#savePath=F\:\\Atelier-template
+
+##Indirizzio
 identity=common
-supplierId=201610281628
-api_url=http://95.242.72.33/ws_sito/ws_sito_P15.asmx/
+supplierId=201611020952
+api_url=http://37.159.226.146:8080/ws_sito_p15/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=shang2016
+password=Shang3110
 savePath=F\:\\Atelier-template
 
