--- a/grouppo-stock/src/main/resources/conf.properties
+++ b/grouppo-stock/src/main/resources/conf.properties
@@ -1,3 +1,9 @@
 supplierId=2016032401823
 jobsSchedule=0 28 0/1 * * ? 
 time=3600000
+
+HOST=http://open.shangpin.com:8080
+#supplier key
+APP_KEY=6645ef1cf1dc49de9178b5782a667f89
+#supplier secret
+APP_SECRET =9726dc9c07b1421d9360c62aa8790ed3
