--- a/lungolivigno-order/src/main/resources/conf.properties
+++ b/lungolivigno-order/src/main/resources/conf.properties
@@ -10,3 +10,4 @@ user_password=lng.r45h
 url_login=http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
 url_saveOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId\=
 url_cancelOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/CancelOrder?SessionId\=
+url_getStock=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
