--- a/lungolivigno/src/main/resources/conf.properties
+++ b/lungolivigno/src/main/resources/conf.properties
@@ -1,8 +1,12 @@
-supplierId=20160527142888
+supplierId=2016110101955_123
 day=90
 picpath=
 
-url_login=http://concordia.vdr-s.com/BSWebApi20/api/User/Login
-url_getProducts=http://concordia.vdr-s.com/BSWebApi20/api/Product/GetProducts?SessionId=
-url_getStock=http://concordia.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
-url_getAttributes=http\://concordia.vdr-s.com/BSWebApi20/api/Product/GetAttributes?SessionId\=
+user_name=ll_web
+user_password=lng.r45h
+
+url_login=http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
+url_getProducts=http://lungolivigno.vdr-s.com/BSWebApi20/api/Product/GetProducts?SessionId=
+url_getStock=http://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
+url_getAttributes=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Product/GetAttributes?SessionId\=
+url_getPriceList=http://lungolivigno.vdr-s.com/BSWebApi20/api/Price/GetPriceList?SessionId=
