--- a/lungolivigno-stock/src/main/resources/conf.properties
+++ b/lungolivigno-stock/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-supplierId=201605271426666
+supplierId=2016110101955
 jobsSchedule=0 45 0/1 * * ? 
 time=3600000
 
-url_login=http://concordia.vdr-s.com/BSWebApi20/api/User/Login
-url_getStock=http://concordia.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
+url_login=http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
+url_getStock=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId\=
