--- a/lungolivigno/src/main/resources/conf.properties
+++ b/lungolivigno/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=2016110101955_123
+supplierId=2016110101955
 day=90
 picpath=
 
@@ -10,3 +10,4 @@ url_getProducts=http://lungolivigno.vdr-s.com/BSWebApi20/api/Product/GetProducts
 url_getStock=http://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
 url_getAttributes=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Product/GetAttributes?SessionId\=
 url_getPriceList=http://lungolivigno.vdr-s.com/BSWebApi20/api/Price/GetPriceList?SessionId=
+url_getPrice=http://lungolivigno.vdr-s.com/BSWebApi20/api/Price/GetPrice?SessionId=
