--- a/lungolivigno-stock/build.gradle
+++ b/lungolivigno-stock/build.gradle
@@ -12,13 +12,17 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources ,dependsClassPath
+    dependsOn copyToLib , copyResources 
     exclude ("**/*.properties")
+    //def manifestCp = configurations.compile.files.collect {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
 	
    		 attributes 'Main-Class': 'com.shangpin.iog.lungolivigno.stock.StockImp'
-    
+    	 //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
    
     }
 }
