--- a/spinnaker-order/src/main/resources/param.properties
+++ b/spinnaker-order/src/main/resources/param.properties
@@ -12,6 +12,8 @@ key=8IZk2x5tVN
 startDateOfTemp=
 endDateOfTemp=
 
+isPurchaseExp=no
+#isPurchaseExp=yes
 
 
 smtpHost=smtp.shangpin.com
@@ -21,4 +23,4 @@ to=lizhongren@shangpin.com
 toReebonz=lizhongren@shangpin.com
 subject=spinaaker order refund
 messageText=
-messageType=text/html;charset=utf-8
+messageType=text/html;charset\=utf-8
