--- a/lungolivigno-order/src/main/resources/conf.properties
+++ b/lungolivigno-order/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
-supplierId=
-supplierNo=
+supplierId=2016110101955
+supplierNo=S0000839
 
 jobsSchedule=0 0/2  * * * ?
 startDateOfTemp=
@@ -10,4 +10,4 @@ user_password=lng.r45h
 url_login=http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
 url_saveOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId\=
 url_cancelOrder=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Order/CancelOrder?SessionId\=
-url_getStock=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId=
+url_getStock=http\://lungolivigno.vdr-s.com/BSWebApi20/api/Stock/GetStock?SessionId\=
