--- a/stockMontiHK/src/main/resources/conf.properties
+++ b/stockMontiHK/src/main/resources/conf.properties
@@ -5,5 +5,5 @@ HOST=http://open.shangpin.com:8080
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
-to=liufang@shangpin.com,wangsaying@shangpin.com,Amanda.lee@shangpin.com,lizhongren@shangpin.com,zhaogenchun@shangpin.com
+to=lubaijiang@shangpin.com
 messageType=text/html;charset=utf-8
