--- a/tufano/src/main/resources/conf.properties
+++ b/tufano/src/main/resources/conf.properties
@@ -208,7 +208,7 @@ picpath=
 ##tufano
 #identity=common
 #supplierId=201610281628
-#api_url=http://79.9.69.28/ws_sito/ws_sito_P15.asmx/
+#api_url=http://95.242.72.33/ws_sito/ws_sito_P15.asmx/
 #spu_interface=GetAllItemsMarketplace
 #sku_interface=GetAllAvailabilityMarketplace
 #image_interface=GetAllImageMarketplace
@@ -218,27 +218,14 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##Indirizzio
-#identity=common
-#supplierId=201611020952
-#api_url=http://37.159.226.146:8080/ws_sito_p15/ws_sito_p15.asmx/
-#spu_interface=GetAllItemsMarketplace
-#sku_interface=GetAllAvailabilityMarketplace
-#image_interface=GetAllImageMarketplace
-#price_interface=GetAllPricelistMarketplace
-#userName=shangpin
-#password=Shang3110
-#savePath=F\:\\Atelier-template
-
-##Bagheera
 identity=common
-supplierId=201611241923
-api_url=http://79.3.196.209/ws_sito_p15/ws_sito_p15.asmx/
+supplierId=201611020952
+api_url=http://37.159.226.146:8080/ws_sito_p15/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=Shang2016
+password=Shang3110
 savePath=F\:\\Atelier-template
-
 
