--- a/grouppo/build.gradle
+++ b/grouppo/build.gradle
@@ -20,11 +20,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources ,dependsClassPath
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
+    
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
    		 attributes 'Main-Class': 'com.shangpin.iog.grouppo.StartUp'
-   
+   		 attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
