--- a/settings.gradle
+++ b/settings.gradle
@@ -38,4 +38,11 @@ include 'tufano'
 include 'lungolivigno-order'
 include 'atelier-paolo-order'
 include 'GiBiLogic-stock'
+include 'spinnaker'
+include 'picturedown'
+include 'monnierfreres'
+include 'coltorti'
+include 'studio69'
+include 'smets-hk-stock'
+include 'smets-stock'
 
