--- a/studio69/src/main/resources/conf.properties
+++ b/studio69/src/main/resources/conf.properties
@@ -4,5 +4,6 @@ url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
 username=SHANGPIN
 password=2MWWKgNSxgf
 day=90
+picpath=
 
 savePath=F\:\\studio69
