--- a/Monti/build.gradle
+++ b/Monti/build.gradle
@@ -22,16 +22,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib, copyResources,dependsClassPath
+    dependsOn copyToLib, copyResources
     exclude ("**/*.properties")
 
-    //def manifestCp = configurations.compile.files.collect  {
-    //    File file = it
-     //   "lib/${file.name}"
-    //}.join(' ')
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.monti.StartUp'
-        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
