--- a/supplier-product-consumer-service/build.gradle
+++ b/supplier-product-consumer-service/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 
 dependencies {
+	compile('com.google.code.gson:gson:2.2.2')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
