八家供应商数据量云监听配置

--- a/pending-product-consumer-service/build.gradle
+++ b/pending-product-consumer-service/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 
 dependencies {
+    compile('org.apache.commons:commons-lang3:3.4')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
