--- a/pending-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/pending-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -6,6 +6,9 @@ spring:
            password: scm-message-service
            virtual-host: /scm-message-service
   cloud: 
+        consul: 
+          discovery: 
+            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
         stream: 
               bindings: 
                         spinnakerPendingProduct: 
