--- a/ephub-data-mongodb-service/build.gradle
+++ b/ephub-data-mongodb-service/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 
 dependencies {
+	compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
@@ -37,4 +38,10 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR3"
+	}
 }
