--- a/ephub-data-mysql-service/build.gradle
+++ b/ephub-data-mysql-service/build.gradle
@@ -34,6 +34,7 @@ repositories {
 }
 
 dependencies {
+	compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
 	compile('com.shangpin.common:commons-redis:1.0.2.RELEASE')
 	compile('com.shangpin.common:commons-rdbms:2.0.0.RELEASE')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -47,4 +48,10 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR3"
+	}
 }
