--- a/order-push-consumer-service/src/main/resources/config/application-pro.yml
+++ b/order-push-consumer-service/src/main/resources/config/application-pro.yml
@@ -175,8 +175,8 @@ shangpin:
                   token: sqdl7cx7hp1ti6k6w112yo5wnbzxigm0
                   secret: htrrblkx5nmcbd2chm708jq1xcpxudw8
                   isPurchaseExp: no
-                  openApiKey:
-                  openApiSecret:
+                  openApiKey: bbe7f9392d9148f697241b82e6e1f394
+                  openApiSecret: 932aafdc45ad477f9d20b0ebb9a22f2a
           leam:
                   url: http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
                   createOrderInterface: NewOrderMarketPlace
