--- a/ephub-data-mysql-service/build.gradle
+++ b/ephub-data-mysql-service/build.gradle
@@ -34,6 +34,7 @@ repositories {
 }
 
 dependencies {
+	compile('log4j:log4j:1.2.17')
 	compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
 	compile('com.shangpin.common:commons-redis:1.0.2.RELEASE')
 	compile('com.shangpin.common:commons-rdbms:2.0.0.RELEASE')
