品牌字典data rest实现

--- a/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
+++ b/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
@@ -5,6 +5,8 @@ spring:
            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
            prefer-ip-address: true
            ip-address: 192.168.4.225
+           hostname: 192.168.4.225
+           port: ${server.port}
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
   mail: 
