--- a/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
+++ b/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
@@ -4,9 +4,10 @@ spring:
          discovery: 
            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
            prefer-ip-address: true
-           ip-address: 192.168.4.225
-           hostname: 192.168.4.225
+           ip-address: 127.0.0.1
+           hostname: localhost
            port: ${server.port}
+           healthCheckUrl: http://localhost:9090/info 
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
   mail: 
