--- a/ephub-common-rpc-connector/build.gradle
+++ b/ephub-common-rpc-connector/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-
+apply plugin: 'maven'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 jar {
 	baseName = 'ephub-common-rpc-connector'
 	version = '0.0.1-SNAPSHOT'
 }
+
+version = '0.0.3-SNAPSHOT'
+
 jar {
     manifest {
         attributes 'Implementation-Title': 'Gradle Quickstart',
@@ -19,6 +22,9 @@ repositories {
 }
 
 dependencies {
+	compileOnly('org.projectlombok:lombok:1.16.12')
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.2.3.RELEASE'
+	compile group: 'org.springframework', name: 'spring-web', version: '4.3.4.RELEASE'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
@@ -26,11 +32,19 @@ dependencies {
 test {
     systemProperties 'property': 'value'
 }
-
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
+uploadArchives {  
+    repositories {  
+        mavenDeployer { 
+        	repository(url: "http://192.168.20.223:8081/nexus/content/repositories/snapshots/") {  
+        		authentication(userName: "admin", password: "admin123")  
+        	}
+        	pom.project {  
+        		name project.name  
+        		packaging 'jar'
+        	}
+        }
+        
     }
 }
+group="com.shangpin.ephub.common.rpc"
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
