增加爱系统消息头推送状态，后续消息平台预加载

--- a/pending-product-consumer-service/build.gradle
+++ b/pending-product-consumer-service/build.gradle
@@ -23,10 +23,13 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/releases/" }
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/snapshots/" }
 }
 
 
 dependencies {
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.0.7-SNAPSHOT')
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
     compile('org.apache.commons:commons-lang3:3.4')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
