--- a/supplier-product-consumer-service/build.gradle
+++ b/supplier-product-consumer-service/build.gradle
@@ -23,10 +23,13 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/releases/" }
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/snapshots/" }
 }
 
 
 dependencies {
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.0.6-SNAPSHOT')
 	compile('com.google.code.gson:gson:2.2.2')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
