增加供价查询接口

--- a/order-push-consumer-service/src/main/resources/config/application-dev.yml
+++ b/order-push-consumer-service/src/main/resources/config/application-dev.yml
@@ -63,6 +63,7 @@ shangpin:
       updatestock: /stock/updatestock
       findporder: /purchase/findporder
       cancelpurchase: /purchase/cancelpurchase
+      supplyfindinfo: /supply/findinfo
     Supplier: #以下配置为各个供货商的配置
       lungolivigno:
               url_login: http://lungolivigno.vdr-s.com/BSWebApi20/api/User/Login
