--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@
 /.gradle/
 /.settings/
 .gradle/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+/bin/
