--- a/pending-product-consumer-service/build.gradle
+++ b/pending-product-consumer-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
 	compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
 	compile('org.springframework.boot:spring-boot-starter-mail')
+	compile('com.shangpin.common:commons-redis:1.0.2.RELEASE')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
