--- a/ephub-data-mongodb-service/src/main/resources/config/application-dev.yml
+++ b/ephub-data-mongodb-service/src/main/resources/config/application-dev.yml
@@ -1,22 +1,11 @@
 spring: 
-  cloud:
-       consul: 
-         discovery: 
-           instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+  data: 
+      mongodb: 
+             uri: mongodb://192.168.9.135:27017/order-stock-message-service
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
-  mail: 
-       default-recipient: yan_xiao_bin@126.com
-       default-sender: yanxiaobin@shangpin.com
-       default-encoding: UTF-8 # Default MimeMessage encoding.
-       host: smtp.263.net # SMTP server host. For instance `smtp.example.com`
-       port: 25 # SMTP server port.
-       protocol: smtp # Protocol used by the SMTP server.
-       username: yanxiaobin@shangpin.com # Login user of the SMTP server.
-       password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
-       image:
-             location: classpath:banner/logo.jpg # Banner image file location (jpg/png can also be used).
+       image: 
+             location: classpath:banner/yan.png # Banner image file location (jpg/png can also be used).
