--- a/ephub-common-rpc-connector/build.gradle
+++ b/ephub-common-rpc-connector/build.gradle
@@ -8,7 +8,7 @@ jar {
 	version = '0.0.1-SNAPSHOT'
 }
 
-version = '0.0.9-SNAPSHOT'
+version = '0.1.2-SNAPSHOT'
 
 jar {
     manifest {
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	compile('com.alibaba:fastjson:1.2.22')
 	compileOnly('org.projectlombok:lombok:1.16.12')
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.2.3.RELEASE'
 	compile group: 'org.springframework', name: 'spring-web', version: '4.3.4.RELEASE'
