--- a/ephub-product-business-service/build.gradle
+++ b/ephub-product-business-service/build.gradle
@@ -23,10 +23,13 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/releases/" }
+	maven { url "http://192.168.20.223:8081/nexus/content/repositories/snapshots/" }
 }
 
 
 dependencies {
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.1.3-SNAPSHOT')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
@@ -37,7 +40,10 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-zuul')
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('commons-net:commons-net:3.3')
 	runtime('org.springframework.boot:spring-boot-devtools')
+	
+	
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
