modify package for prodct-business-service

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@
 /.classpath
 /.project
 *.classpath
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+/bin/
