解决字段名称为关键词的问题

--- a/ephub-product-business-service/build.gradle
+++ b/ephub-product-business-service/build.gradle
@@ -29,7 +29,7 @@ repositories {
 
 
 dependencies {
-	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.2.7-SNAPSHOT')
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.2.9-SNAPSHOT')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
@@ -53,4 +53,7 @@ dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR3"
 	}
+}
+springBoot{
+    mainClass = "com.shangpin.ephub.product.business.EphubProductBusinessServiceApplication"
 }
