--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -11,6 +11,13 @@ spring:
            healthCheckUrl: http://localhost:9094/info 
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+  ftp:
+       host: 192.168.20.110
+       port: 21
+       userName: dev
+       password: shangpin@123
+       ftpHubPath: hub/
+       ftpPendingPath: pending/
   mail: 
        default-recipient: yan_xiao_bin@126.com
        default-sender: yanxiaobin@shangpin.com
