项目启动时不检测邮件功能可用性检查

--- a/pending-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/pending-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -121,7 +121,7 @@ spring:
        protocol: smtp # Protocol used by the SMTP server.
        username: yanxiaobin@shangpin.com # Login user of the SMTP server.
        password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
+       test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
