--- a/supplier-product-consumer-service/src/main/resources/config/application.yml
+++ b/supplier-product-consumer-service/src/main/resources/config/application.yml
@@ -1,5 +1,4 @@
-﻿server.port: 9090
-spring: 
+﻿spring: 
   profiles: 
-    active: dev
+    active: qa
   application.name: supplier-product-consumer-service
