--- a/supplier-product-consumer-service/src/main/resources/config/application-qa.yml
+++ b/supplier-product-consumer-service/src/main/resources/config/application-qa.yml
@@ -1,3 +1,5 @@
+server.port: 8005
+feign.hystrix.enabled: false
 spring: 
   rabbitmq: 
            host: 192.168.20.175
@@ -6,22 +8,162 @@ spring:
            password: scm-message-service
            virtual-host: /scm-message-service
   cloud: 
+        consul: 
+          discovery: 
+            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+            prefer-ip-address: true
+            ip-address: 192.168.20.176
+            hostname: 192.168.20.176
+            port: ${server.port}
+            healthCheckUrl: http://192.168.20.176:8005/info 
         stream: 
               bindings: 
-                        orders: 
-                              destination: SupplierOrderSync
-                              group: push-order
+                        spinnakerOriginalProduct: 
+                              destination: spinnaker.original.product
+                              group: one
                               consumer: 
                                        concurrency: 5
                                        maxAttempts: 1
+                        spinnakerPendingProduct: 
+                              destination: spinnaker.pending.product
+                              content-type: application/json
+                        ostoreOriginalProduct: 
+                              destination: ostore.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        ostorePendingProduct: 
+                              destination: ostore.pending.product
+                              content-type: application/json                        
+                        brunarossoOriginalProduct: 
+                              destination: brunarosso.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        brunarossoPendingProduct: 
+                              destination: brunarosso.pending.product
+                              content-type: application/json                        
+                        stefaniaOriginalProduct: 
+                              destination: stefania.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        stefaniaPendingProduct: 
+                              destination: stefania.pending.product
+                              content-type: application/json                        
+                        gebOriginalProduct: 
+                              destination: geb.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        gebPendingProduct: 
+                              destination: geb.pending.product
+                              content-type: application/json                        
+                        coltortiOriginalProduct: 
+                              destination: coltorti.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        coltortiPendingProduct: 
+                              destination: coltorti.pending.product
+                              content-type: application/json                        
+                        tonyOriginalProduct: 
+                              destination: tony.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        tonyPendingProduct: 
+                              destination: tony.pending.product
+                              content-type: application/json                        
+                        biondioniOriginalProduct: 
+                              destination: biondioni.original.product
+                              group: one
+                              consumer: 
+                                       concurrency: 5
+                                       maxAttempts: 1
+                        biondioniPendingProduct: 
+                              destination: biondioni.pending.product
+                              content-type: application/json                                                                                                                                                                                                                                                                                                          
               rabbit: 
                       bindings: 
-                        orders: 
-                              consumer: 
+                            spinnakerOriginalProduct: 
+                                  consumer: 
                                        prefix: HA.
-                                       autoBindDlq: true
-                                       requeueRejected: false
-                                       republishToDlq: true
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            spinnakerPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                    
+                            ostoreOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            ostorePendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                        
+                            brunarossoOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            brunarossoPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                        
+                            stefaniaOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            stefaniaPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                        
+                            gebOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            gebPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                       
+                            coltortiOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            coltortiPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                        
+                            tonyOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            tonyPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                          
+                            biondioniOriginalProduct: 
+                                  consumer: 
+                                       prefix: HA.
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
+                            biondioniPendingProduct: 
+                                  producer: 
+                                       prefix: HA.                                                                                                                                                                                                                                                                                                                 
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
   mail: 
@@ -33,7 +175,7 @@ spring:
        protocol: smtp # Protocol used by the SMTP server.
        username: yanxiaobin@shangpin.com # Login user of the SMTP server.
        password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
+       test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
